# CallMeMabe

./: .gitignore  Makefile  README.md  pyproject.toml
data/input/: bool.json  edge_cases.json  function_calling_tests.json  functions.json  functions_advanced.json  functions_definition.json  hard_prompts.json  object.json  regex_one.json  regex_tests.json  tests2.json
data/output/: edge_cases.json  function_calling_results.json  function_calls.json  hard_tests.json  regex_one.json  tests2.json  tests3.json  tests4.json  testsbool.json  testsobjeOP  testsobject.json
src/: __init__.py  __main__.py  format_data.py  functions.py  generators.py  llm.py  llm_loop.py  parameter_extraction.py  parser.py  shell_prints.py  validation_models.py
