[project]
name = "callmemaybe"
version = "1.3"
description = "Drone Pathfinding and Path Assignment Optimizer"
readme = "README.md"
authors = [
    { name = "dansimoe"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pydantic",
    "flake8",
    "mypy",
	"llm_sdk",
	"accelerate"
]

[tool.uv.sources]
llm_sdk = { path = "llm_sdk" }

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
